# modal-operator

./: .gitignore  DEVELOPMENT.md  Dockerfile  README.md  Tiltfile  kind-config.yaml  kubeflow-katib.txt  kubeflow-trainer.txt  modal-labs-libmodal.txt  modal-labs-modal-client.txt  nolar-kopf.txt  pyproject.toml  tilt.sh
.amazonq/rules/: code.md  kubernetes.md  python.md
.github/: renovate.json
.github/workflows/: README.md  build-image.yml  build-sidecars.yml  ci.yml  publish-chart.yml  release.yml  test.yml
charts/modal-operator/: Chart.yaml  values.yaml
charts/modal-operator/crds/: modalendpoints.yaml  modalfunctions.yaml  modaljobs.yaml
charts/modal-operator/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  webhook.yaml
charts/modal-vgpu-operator/crds/: modaljobs.yaml
deploy/: crds.yaml  namespace.yaml  operator.yaml  test-gpu-pod.yaml
docker/modal-logger/: Dockerfile  Dockerfile.distroless  logger.py  stream-logs.sh
docker/modal-placeholder/: Dockerfile  main.py
docker/vprox/: Dockerfile
docs/: DESIGN.md  METRICS.md  NETWORKING.md
examples/: distributed-training.yaml  gpu-llm.yaml  http-server-integration-test.yaml  http-server-modalfunction.yaml  immich-integration.py  immich-modal-deployment.yaml  katib-experiment.yaml  llm-serving.yaml  modal-container-pod.yaml  modal-function.yaml  mysql-test.yaml  ollama-endpoint.yaml  ollama-modalfunction.yaml  pytorch-job.yaml  service-integration-test.yaml  simple-app.yaml  simple-llm-endpoint.yaml  simple-modalfunction.yaml  test-function.py  test-modal-function.yaml  trainjob-modal.yaml  webhook-test-pod.yaml
modal_operator/: __init__.py  __main__.py  _functions.py  _object.py  _output.py  _partial_function.py  _pty.py  _serialization.py  _traceback.py  app.py  cli.py  client.py  cls.py  config.py  crds.py  deployer.py  dict.py  exception.py  file_pattern_matcher.py  functions.py  health.py  metrics.py  modal_client.py  networking.py  operator.py  partial_function.py  proxy.py  resources.py  tunnel.py  tunnel_server.py
modal_operator/_runtime/: __init__.py
modal_operator/_utils/: __init__.py  app_utils.py  async_utils.py  auth_token_manager.py  blob_utils.py  bytes_io_segment_payload.py  deprecation.py  docker_utils.py  function_utils.py  git_utils.py  grpc_testing.py  grpc_utils.py  hash_utils.py  http_utils.py  jwt_utils.py  logger.py  mount_utils.py  name_utils.py  package_utils.py  pattern_utils.py  rand_pb_testing.py  shell_utils.py  time_utils.py
modal_operator/controllers/: function_controller.py  modal_job_controller.py  networking_controller.py  status_sync.py  trainjob_controller.py  tunnel_service.py  webhook_controller.py
modal_proxy/: Dockerfile  main.py  modal_proxy.py  tunnel_manager.py
scripts/: generate-crds.py  modal_e2e.py  modal_e2e_simple.py  run-e2e-tests.sh  run-modal-e2e.sh
tests/: test_crds.py  test_e2e.py  test_metrics.py  test_mirror_pod.py  test_modal_client.py  test_mutating_webhook.py  test_networking.py  test_operator.py  test_pod_mirror.py  test_status_sync.py  test_trainjob_controller.py  test_webhook.py
tests/e2e/: E2E_TEST_DESIGN.md  __init__.py  conftest.py  test_error_handling.py  test_kubeflow_integration.py  test_networking.py  test_pod_interception.py
tunnel/: Dockerfile  Dockerfile.distroless  function_proxy.py  main.py  proxy.py
