[build-system]
requires = ["setuptools~=80.10.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modal-operator"
description = "Kubernetes operator for managing Modal apps with in-cluster service discovery"
readme = "README.md"
version = "0.2.0"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "kopf>=1.37.0",
    "modal>=1.2.0",
    "kubernetes>=28.0.0",
    "pydantic>=2.0.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.0.0",
]

[project.scripts]
modal-operator = "modal_operator.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]

[tool.setuptools.packages.find]
include = ["modal_operator", "modal_operator.*"]
exclude = ["test*"]

[tool.pytest.ini_options]
timeout = 300
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
exclude = ['.venv', '.git', '__pycache__', 'build']

[tool.ruff.lint]
ignore = ['E741', 'F841']
select = ['E', 'F', 'W', 'I']

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["modal_operator"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]
